--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Export your Strava Activities</h1>
 <button id="connect-strava">Connect with Strava</button>
 <div id="status"></div>
-<button id="download-json" style="display:none;">Download JSON</button>
+<a id="download-json" style="display:none; padding: 10px; background: #ff5500; color: white; text-decoration: none; border-radius: 5px;">Download JSON</a>
 
 <script src="script.js"></script>
 </body>
