--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         #download-json {
-            display: none; /* ✅ Ukryty przycisk na starcie */
+            display: none;
             padding: 10px;
             background: #ff5500;
             color: white;
@@ -47,18 +47,18 @@
     <h1>Eksportuj swoje aktywności Strava</h1>
 
     <!-- Przycisk "Połącz ze Strava" jako obrazek -->
-    <a href="https://www.strava.com/oauth/authorize?client_id=YOUR_CLIENT_ID&response_type=code&redirect_uri=YOUR_REDIRECT_URI&scope=read_all">
-        <img src="btn_strava_connect_with_orange.svg" alt="Połącz ze Strava">
+    <a id="connect-strava">
+        <img src="btn_strava_connect_with_white.png" alt="Połącz ze Strava">
     </a>
 
     <div id="status"></div>
 
-    <!-- Przycisk pobierania JSON (Ukryty domyślnie) -->
+    <!-- Przycisk pobierania JSON -->
     <a id="download-json">Pobierz JSON</a>
 
     <!-- Logo "Powered by Strava" -->
     <div class="powered-by">
-        <img src="api_logo_pwrdBy_strava_horiz_black.svg" alt="Powered by Strava">
+        <img src="api_logo_pwrdBy_strava_horiz_white.png" alt="Powered by Strava">
     </div>
 </div>
 
