--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Przycisk "Połącz ze Strava" jako obrazek -->
     <a id="connect-strava">
-        <img src="btn_strava_connect_with_white.png" alt="Połącz ze Strava">
+        <img src="btn_strava_connect_with_orange.svg" alt="Połącz ze Strava">
     </a>
 
     <div id="status"></div>
@@ -58,7 +58,7 @@
 
     <!-- Logo "Powered by Strava" -->
     <div class="powered-by">
-        <img src="api_logo_pwrdBy_strava_horiz_white.png" alt="Powered by Strava">
+        <img src="api_logo_pwrdBy_strava_horiz_black.svg" alt="Powered by Strava">
     </div>
 </div>
 
