--- a/privacy.html
+++ b/privacy.html
@@ -1,41 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Privacy Policy - Strava Data Export</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            line-height: 1.6;
-            text-align: center;
-            background-color: #f8f8f8;
-        }
-        h1, h2 {
-            color: #ff5500;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            text-align: left;
-        }
-        a {
-            color: #ff5500;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-        .powered-by {
-            margin-top: 30px;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -44,7 +18,7 @@
     <p>Last updated: March 15, 2025</p>
 
     <h2>1. Introduction</h2>
-    <p>This Privacy Policy explains how Strava Data Export ("we", "our", or "the application") collects, uses, and protects your personal data when using the application.</p>
+    <p>This Privacy Policy explains how Data Export ("we", "our", or "the application") collects, uses, and protects your personal data when using the application.</p>
 
     <h2>2. Data Collected</h2>
     <p>When you connect your Strava account, we may access the following data:</p>
@@ -74,9 +48,11 @@
     <h2>7. Contact</h2>
     <p>If you have any questions regarding this Privacy Policy, please contact us at: <strong>skwarko@student.agh.edu.pl</strong></p>
 
-    <p><a href="index.html">← Back to Home</a></p>
+    <div class="footer">
+        <a href="index.html" class="link-privacy">← Back to Home</a>
+    </div>
 
-    <!-- "Powered by Strava" logo -->
+    <!-- Powered by Strava logo -->
     <div class="powered-by">
         <img src="api_logo_pwrdBy_strava_horiz_black.svg" alt="Powered by Strava">
     </div>
