change name and limits

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="App Logo" class="app-logo">
     </div>
 
-    <h1>Strava Data Export</h1>
+    <h1>Data Export</h1>
 
     <div class="app-description">
         <p>
